# HALO

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
cloud_service/: .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  service.yaml
cloud_service/cloud_service/: __init__.py  app.py  config.py  deps.py  firestore_store.py  live_agent.py  live_agent_manager.py  session_manager.py  ws_handler.py
cloud_service/scripts/: smoke_test.py
cloud_service/tests/: conftest.py  test_app.py  test_firestore_store.py  test_integration.py  test_live_agent.py  test_session_manager.py
configs/: CLAUDE.md
configs/live_agent/: system_prompt.md
configs/perception/: scene_analysis.md
configs/planner/: system_prompt.md
configs/planner/skills/: pick.md  place.md
configs/skills/pick/: default.mmd  system_prompt.md
configs/skills/place/: default.mmd  system_prompt.md
configs/skills/track/: default.mmd
docs/: README.md  halo_architecture.md  halo_plan_summary.md
docs/data/mock/: observe_fn_result.json  perception_info.json  vlm_response.json
halo/: __main__.py  runner.py
halo/bridge/: CLAUDE.md  __init__.py  config.py  sim_apply_fn.py  sim_chunk_fn.py  sim_client.py  sim_observe_fn.py  sim_source.py  sim_tracker_service.py  teacher_adapter.py  transforms.py
halo/cognitive/: CLAUDE.md  __init__.py  audio_io.py  backend.py  cloud_backend.py  compaction_plugin.py  compactor.py  config.py  context_store.py  lease.py  live_agent_client.py  live_backend.py  live_session.py  local_backend.py  remote_backend.py  switchboard.py
halo/contracts/: CLAUDE.md  actions.py  commands.json  commands.py  enums.json  enums.py  events.json  events.py  serde.py  snapshot.json  snapshots.py
halo/runtime/: CLAUDE.md  command_router.py  event_bus.py  runtime.py  state_store.py
halo/services/control_service/: CLAUDE.md  action_buffer.py  config.py  joint_safety_guard.py  joint_service.py  safety_guard.py  service.py  te_buffer.py
halo/services/planner_service/: CLAUDE.md  agent.py  config.py  service.py  snapshot_serializer.py  tools.py
halo/services/skill_runner_service/: CLAUDE.md  config.py  definitions.py  engine.py  fsm.py  graph.py  handlers.py  mermaid_parser.py  queue.py  service.py  skill_run.py  track_fsm.py  view_model.py
halo/services/target_perception_service/: CLAUDE.md  config.py  frame_buffer.py  gemini_vlm_fn.py  handle_match.py  mock_fns.py  mujoco_source.py  ollama_vlm_fn.py  service.py  tracker_fn.py  video_capture_fn.py  video_source.py  vlm_fn.py  vlm_parser.py
halo/testing/: CLAUDE.md  __init__.py  event_recorder.py  metrics.py  mock_fns.py  runner.py  state_seeder.py
halo/tui/: CLAUDE.md  README.md  app.py  feed_viewer.py  fsm_overlay.py  run_logger.py
infra/: CLAUDE.md  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
integration/: conftest.py  test_gemini_live.py  test_gemini_planner.py  test_planner_integration.py
models/: README.md
mujoco_sim/: CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
mujoco_sim/mujoco_sim/: constants.py  scene_info.py
mujoco_sim/mujoco_sim/assets/so101/: pick_scene.xml  so101_new_calib.xml
mujoco_sim/mujoco_sim/config/: __init__.py  env_config.py
mujoco_sim/mujoco_sim/dataset/: __init__.py  raw_episode.py  reader_hdf5.py  writer_hdf5.py
mujoco_sim/mujoco_sim/env/: __init__.py  robosuite_env.py  so101_env.py
mujoco_sim/mujoco_sim/runner/: __init__.py  run_teacher.py
mujoco_sim/mujoco_sim/scripts/: generate_episodes.py  inspect_episode.py  measure_pinch_offset.py  test_env.py  visualize_ik_pose.py
mujoco_sim/mujoco_sim/server/: __init__.py  __main__.py  config.py  handlers.py  protocol.py
mujoco_sim/mujoco_sim/teacher/: __init__.py  grasp_planner.py  ik_helper.py  keyframe_planner.py  pick_teacher.py  place_keyframe_planner.py  trajectory.py  trajectory_validator.py  waypoint_generator.py
mujoco_sim/mujoco_sim/tests/: test_constants_sync.py  test_grasp_planner.py  test_pick_teacher.py  test_raw_episode.py  test_server.py  test_trajectory_pipeline.py
sim/: CLAUDE.md  README.md  pyproject.toml
sim/halo_sim/: __init__.py  constants.py
sim/halo_sim/bridge/: protocol.py  sim_server.py
sim/halo_sim/cfg/: domain_rand.py  env_cfg.py  robot_cfg.py  scene_cfg.py  teacher_cfg.py
sim/halo_sim/envs/: pick_env.py
sim/halo_sim/scripts/: generate_demos.py  replay_demos.py  run_bridge.py  test_robot_spawn.py
sim/halo_sim/teacher/: ik_teacher.py  teacher_fsm.py
tests/: test_action_buffer.py  test_audio_io.py  test_bridge_transforms.py  test_cognitive_backend.py  test_command_router.py  test_compactor.py  test_context_store.py  test_contracts.py  test_control_service.py  test_event_bus.py  test_event_recorder.py  test_feed_viewer.py  test_frame_buffer.py  test_fsm_engine.py  test_fsm_graph.py  test_gemini_vlm_fn.py  test_handlers.py  test_joint_control_service.py  test_joint_safety_guard.py  test_lease.py  test_live_session.py  test_mermaid_parser.py  test_mujoco_sim_contract_sync.py  test_planner_agent.py  test_planner_prompt.py  test_planner_service.py  test_runner.py  test_runtime.py  test_safety_guard.py  test_serde.py  test_service_queue.py  test_sim_client.py  test_sim_contract_sync.py  test_skill_queue.py  test_skill_registry.py  test_skill_runner_fsm.py  test_skill_runner_place.py  test_skill_runner_service.py  test_skill_runner_track.py  test_state_store.py  (+6 more)
tests/component/: conftest.py  test_compaction.py  test_compaction_flow.py  test_control_component.py  test_perception_component.py  test_planner_component.py  test_skill_runner_component.py  test_skill_runner_sim.py  test_skill_runner_teacher.py  test_switchboard_warmup.py
tests/e2e/: conftest.py  test_mujoco_source.py  test_multi_target_tracking.py  test_planner_driven_pick.py  test_tracker_vs_vlm_bbox.py  utils.py
tests/system/: conftest.py  test_full_pick_scenario.py  test_recovery_scenario.py  test_safety_scenario.py
