[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70",
    "Pillow>=10",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: LLM integration tests — require a running Ollama instance",
]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning:langchain_core\\._api\\.deprecation",
]
