[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.70",
    "Pillow>=10",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]
viewer = ["opencv-python>=4.8"]
sim = ["pyzmq>=25", "msgpack>=1.0"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: LLM integration tests — require a running Ollama instance",
    "component: component tests — one real service with mocked deps and latency",
    "system: system tests — all real services wired with mocked external deps",
    "e2e: end-to-end tests — real services with real LLM/VLM deps",
]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning:langchain_core\\._api\\.deprecation",
]
