[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.70",
    "Pillow>=10",
    "google-adk>=1.0",
    "litellm>=1.0",
    "opencv-python>=4.8",
    "pyzmq>=25",
    "msgpack>=1.0",
    "httpx>=0.28",
    "google-cloud-firestore>=2.16",
    "sounddevice>=0.5",
    "websockets>=13",
]

[project.optional-dependencies]
sim = ["halo-mujoco-sim[sim]"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8", "halo-mujoco-sim[sim]"]

[tool.uv.workspace]
members = ["mujoco_sim", "cloud_service"]

[tool.uv.sources]
halo-mujoco-sim = { workspace = true }
halo-cloud-service = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: LLM integration tests — require a running Ollama instance",
    "component: component tests — one real service with mocked deps and latency",
    "system: system tests — all real services wired with mocked external deps",
    "e2e: end-to-end tests — real services with real LLM/VLM deps",
]
filterwarnings = []
