[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo-cloud-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "halo",
    "google-adk>=1.0",
    "Pillow>=10",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.28", "ruff>=0.8"]

[tool.hatch.build.targets.wheel]
packages = ["cloud_service"]

[tool.uv.sources]
halo = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
