[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo-mujoco-sim"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "robosuite>=1.5",
    "mujoco>=3.0",
    "h5py>=3.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]
viewer = ["opencv-python>=4.8"]

[tool.hatch.build.targets.wheel]
packages = ["mujoco_sim"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["mujoco_sim/tests"]
